test/libsolidity/syntaxTests/inlineAssembly/invalid/calldata_array_offset.sol
contract C {
    function f(uint[] calldata bytesAsCalldata) external pure {
        assembly {
            let x := bytesAsCalldata.offset
        }
    }
}
// ----
